# DevOps_ETL_project

DEVOPS_ETL/DEVOPS_ETL/: .gitignore  README.md  README.md.bak  gitlab_connection_test_results.txt  harmonization_status.txt  harmonization_test_results.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  setup_and_test.bat  setup_and_test.sh  summarize_tests.py  test_harmonization.py  test_harmonization_with_log.py  test_hex_results.txt  test_results.txt  test_summary.txt  users_display_results.txt  verify_status.py
DEVOPS_ETL/DEVOPS_ETL/.github/chatmodes/: NinjaDav.chatmode.md
DEVOPS_ETL/DEVOPS_ETL/.github/instructions/: copilot_instuction.instructions.md
DEVOPS_ETL/DEVOPS_ETL/backup/scripts/: export_gitlab_users.py
DEVOPS_ETL/DEVOPS_ETL/config/: __init__.py  settings.py
DEVOPS_ETL/DEVOPS_ETL/config/environments/: dev.yaml  dev_clean.yaml
DEVOPS_ETL/DEVOPS_ETL/config/secrets/: __init__.py  secret_manager_enhanced.py  secret_manager_optimized.py
DEVOPS_ETL/DEVOPS_ETL/docs/: 02_ARCHITECTURE.md  CODE_IMPROVEMENTS_SUMMARY.md  CODE_OPTIMIZATION.md  DEPENDENCIES_STATUS.md  FILE_CLEANUP_PLAN.md  FILE_HARMONIZATION_PLAN.md  FILE_ORGANIZATION_GUIDE.md  GITLAB_CLIENT_CONSOLIDATION_PLAN.md  GITLAB_EXPORT_EXTENSION.md  HARMONIZATION_VERIFICATION.md  HEXAGONAL_ARCHITECTURE.md  MIGRATION_PYTHON_GITLAB.md  MODULES_REFERENCE.md  NAMING_CONVENTIONS.md  REORGANIZATION_PLAN.md  SCRIPTS_INDEX.md  SECRET_MANAGEMENT.md  index.md
DEVOPS_ETL/DEVOPS_ETL/utils/: __init__.py  clean_project.py  clean_pycache.py  verify_excel_export.py
(+72 files in other folders)
